first commit with JspController delete - done, getall - done

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -9,4 +9,7 @@ user.roles=Роли
 user.active=Активный
 user.registered=Зарегистрирован
 meal.title=Моя еда
+meal.date=Дата
+meal.description=Название
+meal.calories=Калории
 common.select=Выбрать
