commit HW6 1.3 done

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -12,4 +12,7 @@ meal.title=Моя еда
 meal.date=Дата
 meal.description=Название
 meal.calories=Калории
+mealcreate.title=Создание еды
+mealupdate.title=Обновление еды
+mealform.button=Сохранить
 common.select=Выбрать
