--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -1,6 +1,7 @@
 app.title=Подсчет калорий
 app.footer=Приложение стажировки <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a>
 app.login=Зайти как
+app.profile=профиль
 
 user.title=Пользователи
 user.edit=Редактировать пользователя
@@ -11,6 +12,7 @@ user.roles=Роли
 user.active=Активный
 user.registered=Зарегистрирован
 user.password=Пароль
+user.caloriesPerDay=Норма калорий в день
 
 meal.title=Моя еда
 meal.edit=Редактировать еду
